<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mathExitDialogHeader">Are you sure you want to exit the match?</string>
    <string name="exitMatchPositiveText">Yes</string>
    <string name="exitMatchNegativeText">No</string>
    <string name="move">move</string>
    <string name="playerWarning">don\'t forget to separate each word you enter using spaces</string>
    <string name="closeMessage">close</string>
    <string name="error">Error</string>
    <string name="emptyInputError">please enter the sequence of words</string>
    <string name="improperWordNumber">you have to enter only one additional word</string>
    <string name="userWon">YOU WON</string>
    <string name="botWon">YOU LOST</string>
    <string name="menu">MENU</string>
    <string name="newgame">NEW GAME</string>

</resources>