<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/yesNoRoot"
    android:background="@drawable/button_shape_ripple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathExitDialogHeader"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:maxWidth="340dp"
        android:id="@+id/exitMatchHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintTop_toTopOf="parent"
    />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fyi_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitMatchHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        >
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias=".07"
            android:layout_width="146dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/dialogButtonColor"
            android:background="@drawable/button_shape_ripple"
            android:id="@+id/negative"
            android:text="@string/exitMatchNegativeText"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="146dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/dialogButtonColor"
            android:background="@drawable/button_shape_ripple"
            android:text="@string/exitMatchPositiveText"
            android:id="@+id/positive"
            app:layout_constraintHorizontal_bias=".93"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>