<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/message_view_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintWidth_percent=".96">

        <ImageView
            android:id="@+id/messageTypeIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_message_type_indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/messageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".04"
            app:layout_constraintLeft_toRightOf="@id/messageTypeIndicator"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/messageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/messageIcon"
            app:layout_constraintBottom_toTopOf="@id/messageDesc"
            app:layout_constraintTop_toTopOf="@id/messageIcon" />

        <TextView
            android:id="@+id/messageDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyInputError"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:textColor="@color/white"
            android:paddingTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/messageTitle"
            app:layout_constraintBottom_toBottomOf="@id/messageIcon"
            app:layout_constraintWidth_percent=".56"
            app:layout_constraintLeft_toRightOf="@id/messageIcon"
            android:layout_marginLeft="10dp"
            />


        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:background="@color/dividerColor"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/messageTypeIndicator"
            app:layout_constraintLeft_toRightOf="@id/messageDesc"
            app:layout_constraintTop_toTopOf="@id/messageTypeIndicator" />

        <TextView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/closeMessage"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>